# wax

./: Cargo.toml
src/: main.rs
src/action_map/: mod.rs
src/anathema_app/: mod.rs
src/anathema_app/components/: actions.rs  mod.rs
src/components/: actions.rs  input.rs  mod.rs
templates/: index.aml  input.aml  model_picker.aml
